# fastsam_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: CI.yaml
launch/: fastsam_bbox.launch  fastsam_everything.launch  fastsam_point.launch  fastsam_text.launch
scripts/: fastsam_node.py
