<?xml version="1.0"?>
<package format="2">
  <name>fastsam_ros</name>
  <version>0.2.0</version>
  <description>The fastsam_ros package provides a ROS1 node for the Fast Segment Anything Model (FastSAM).</description>

  <maintainer email="leus@todo.todo">leus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>
  <exec_depend>catkin_virtualenv</exec_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <depend>vision_msgs</depend>

  <export>
  </export>
</package>
